--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
     "http-errors": "~1.6.2",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
-    "node-fetch": "^2.6.0",
-    "pug": "2.0.0-beta11",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "pug": "2.0.0-beta11"
   }
 }
