--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bluebird": "^3.5.4",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^8.0.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "moment": "^2.24.0",
